--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
         "lint": "eslint --cache .",
         "format": "eslint --cache --fix .",
         "test": "./node_modules/mochapack/bin/mochapack \"tests/**/*.js\"",
-        "test-windows": "node_modules\\.bin\\mochapack \"tests/**/*.js\""
+        "test-windows": "node_modules\\.bin\\mochapack \"tests/**/*.js\"",
+        "foobar": "peggy ./shared/parsers/query.pegjs && peggy ./shared/parsers/format.pegjs"
     },
     "repository": {
         "type": "git",
@@ -45,6 +46,7 @@
         "express": "^4.18.2",
         "mocha": "^10.2.0",
         "mochapack": "^2.1.4",
+        "peggy": "^4.0.0",
         "prettier": "^1.19.1",
         "rimraf": "^5.0.1",
         "style-loader": "^3.3.3",
