Add UDF to study and endpoint forms (#906)
* render udf form inside study form

* Add model for saved data from UDF

* remove duplicate widget

* add todo for form tag issue

* render saved UDF data on study detail page

* add mixin for adding UDF to detail pages

* lint

* backport changes for demo

* reduce queries in forms w/ UDF

* changes from review

* remove generic relation

* remove import

* fix test now that rendering works properly

* fix udf detail pages

* move fixture modelbinding to different assessment

* fix tests

* add dynamicformlisteners to necessary pages

* create UDFCache class

* add cache to endpoint form

* set udf contents when form is saved

* integrate cache into detail pages

* delete cache for modelbinding post save

* add caching to study form

* clean up cache class

* fix content cache to work on detail pages

* fix attribute error and add type hints

* format templates

* fix curlies, change field name

* reformat test html

* refactor common code into a form mixin

* load JS with DynamicForm or DynamicFormWidget

* add db constraint

* rename UDF table fragment

* fix table template layout

* fix unique-together constraint

* fix signals

* bonus - improve type annotations for cacheable

* refactor cache

* refactor content list

* add tests

---------

Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>
Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -11113,10 +11113,10 @@
 - model: udf.ModelBinding
   pk: 1
   fields:
-    assessment: 1
+    assessment: 4
     content_type:
-    - animal
-    - endpoint
+    - study
+    - study
     form: 1
     creator:
     - pm@hawcproject.org
@@ -11132,6 +11132,19 @@
     - pm@hawcproject.org
     created: 2023-09-17 04:10:29.880052+00:00
     last_updated: 2023-09-17 04:15:33.309627+00:00
+- model: udf.modeludfcontent
+  pk: 1
+  fields:
+    model_binding: 1
+    content_type:
+    - study
+    - study
+    object_id: 9
+    content:
+      field1: test
+      field2: 123
+    created: 2024-03-12 15:19:07.533314+00:00
+    last_updated: 2024-03-12 15:19:07.533329+00:00
 - model: reversion.revision
   pk: 1
   fields:
