--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -11146,7 +11146,7 @@
     - pm@hawcproject.org
     created: 2023-09-17 04:10:29.880052+00:00
     last_updated: 2023-09-17 04:15:33.309627+00:00
-- model: udf.modeludfcontent
+- model: udf.ModelUDFContent
   pk: 1
   fields:
     model_binding: 1
@@ -11159,6 +11159,16 @@
       field2: 123
     created: 2024-03-12 15:19:07.533314+00:00
     last_updated: 2024-03-12 15:19:07.533329+00:00
+- model: udf.TagUDFContent
+  pk: 1
+  fields:
+    reference: 1
+    tag_binding: 1
+    content:
+      field1: testing
+      field2: 321
+    created: 2024-05-08 12:21:07.533314+00:00
+    last_updated:  2024-05-08 12:21:07.533314+00:00
 - model: reversion.revision
   pk: 1
   fields:
