--- a/compose/app/Dockerfile
+++ b/compose/app/Dockerfile
@@ -24,12 +24,11 @@ RUN apt-get update && \
     \
     mkdir -p /app/logs
 
-COPY ./requirements /app/build/requirements
 COPY ./dist /app/build/dist
 
 WORKDIR /app/build
 RUN pip install -U pip && \
-    pip install -r /app/build/requirements/production.txt --no-cache-dir && \
+    pip install "dist/dist/hawc-2024.1-py3-none-any.whl[prod]" --no-cache-dir && \
     pip uninstall -y pip setuptools && \
     rm -rf /app/build && \
     chown -R app:app /app
