--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,79 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.12"
+dependencies = [
+  # web application
+  "Django~=5.0.6",
+  "django-crispy-forms==2.1",
+  "crispy-bootstrap4==2023.1",
+  "django-filter==23.5",
+  "django-redis==5.3.0",
+  "django-reversion==5.0.4",
+  "django-autocomplete-light==3.9.7",
+  "django-taggit==4.0.0",
+  "django-treebeard==4.7",
+  "django-webpack-loader==2.0.1",
+  "djangorestframework==3.14.0",
+  "uritemplate==4.1.1",
+  "pyyaml==6.0.1",
+  "gunicorn==22.0.0",
+  "wagtail==5.2.2",
+  "wagtail-draftail-anchors==0.6.0",
+  # tasks
+  "celery==5.3.6",
+  "billiard==4.2.0",
+  "kombu==5.3.5",
+  # utilities
+  "jsonschema==4.19.1",
+  "lxml==4.9.3",
+  "psycopg2-binary==2.9.9",
+  "redis==5.0.1",
+  "requests==2.31.0",
+  "pydantic==2.4.2",
+  "nh3==0.2.15",
+  "tinycss2==1.2.1",
+  # computational
+  "numpy==1.26.1",
+  "pandas==2.1.1",
+  "openpyxl==3.1.2",
+  "jinja2==3.1.2",
+  "plotly==5.17.0",
+  "scipy==1.11.3",
+  "bmds==23.4",
+  # exports
+  "rispy==0.8.1",
+  "python-docx==1.0.1",
+  ]
+
+[project.optional-dependencies]
+dev = [
+  # build
+  "flit==3.9.0",
+  # lint and formatting tools
+  "ruff==0.1.3",
+  "djhtml==3.0.6",
+  "pre-commit==3.6.0",
+  # django development
+  "django-debug-toolbar==4.2.0",
+  "django-browser-reload==1.12.0",
+  "django-extensions==3.2.3",
+  "faker==19.10.0",
+  # tests
+  "coverage==7.3.2",
+  "pytest==7.4.2",
+  "pytest-django==4.5.2",
+  "vcrpy==5.1.0",
+  "pytest-recording==0.13.1",
+  "playwright==1.40.0",
+  "pytest-playwright==0.4.3",
+]
+docs = [
+  "mkdocs-material==9.4.6",
+]
+prod = [
+  "django-anymail==10.1",
+  "sentry_sdk==1.45.0",
+]
 
 [project.scripts]
 manage = "hawc:manage"
