use command to find build

--- a/compose/app/Dockerfile
+++ b/compose/app/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.12-slim-bullseye
 
 ENV PYTHONUNBUFFERED 1
-ENV HAWC_VERSION "2024.1"
 
 RUN groupadd -g 555 -r app && \
     useradd -u 555 -r -g app app
@@ -29,7 +28,7 @@ COPY ./dist /app/build/dist
 
 WORKDIR /app/build
 RUN pip install -U pip && \
-    pip install "./dist/hawc-${HAWC_VERSION}-py3-none-any.whl[prod]" --no-cache-dir && \
+    pip install "$(ls dist/hawc-*.whl | head -1)[prod]" --no-cache-dir && \
     pip uninstall -y pip setuptools && \
     rm -rf /app/build && \
     chown -R app:app /app
