--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,9 @@ jobs:
     - name: install
       run: |
         mv tests/data/ci-webpack-stats.json hawc/webpack-stats.json
-        pip install -U pip wheel
-        pip install -r requirements/dev.txt
+        python -m pip install -U pip wheel
+        python -m pip install -e ".[dev,docs]"
+        python -m pip install -e client
     - name: lint-py
       run: |
         make lint-py
@@ -151,8 +152,9 @@ jobs:
         path: hawc
     - name: install hawc
       run: |
-        pip install -U pip
-        pip install -r requirements/dev.txt
+        python -m pip install -U pip wheel
+        python -m pip install -e ".[dev,docs]"
+        python -m pip install -e client
         playwright install --with-deps chromium
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
