--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dev = [
   # build
   "flit==3.9.0",
   # lint and formatting tools
-  "ruff==0.1.3",
+  "ruff==0.4.9",
   "djhtml==3.0.6",
   "pre-commit==3.6.0",
   # django development
@@ -134,14 +134,14 @@ exclude = [
 [tool.ruff]
 line-length = 100
 target-version = "py311"
-select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
-ignore = ["E501", "B904", "B007", "S308", "S113", "S314", "S603", "S607", "RUF012", "RUF015"]
-unfixable = ["F401", "F841"]
+lint.select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
+lint.ignore = ["E501", "B904", "B007", "S308", "S113", "S314", "S603", "S607", "RUF012", "RUF015"]
+lint.unfixable = ["F401", "F841"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["hawc", "hawc_client"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "test_*.py" = ["S101", "S106"]
 "scripts/*.py" = ["T201"]
 "**/management/**.py" = ["T201"]
