--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,34 +19,35 @@ requires-python = ">=3.12"
 dependencies = [
   # web application
   "Django~=5.0.6",
-  "django-crispy-forms==2.1",
-  "crispy-bootstrap4==2023.1",
+  "django-crispy-forms==2.2",
+  "crispy-bootstrap4==2024.1",
   "django-filter==23.5",
-  "django-redis==5.3.0",
-  "django-reversion==5.0.4",
-  "django-autocomplete-light==3.9.7",
+  "django-redis==5.4.0",
+  "django-reversion==5.0.12",
+  "django-autocomplete-light==3.11.0",
   "django-taggit==4.0.0",
-  "django-treebeard==4.7",
+  "django-treebeard==4.7.1",
+  "djangorestframework==3.15.1",
   "django-webpack-loader==3.1.0",
-  "djangorestframework==3.14.0",
   "uritemplate==4.1.1",
+  "inflection==0.5.1",
   "pyyaml==6.0.1",
   "gunicorn==22.0.0",
-  "wagtail==5.2.2",
+  "wagtail==5.2.5",
   "wagtail-draftail-anchors==0.6.0",
   # tasks
-  "celery==5.3.6",
+  "celery==5.4.0",
   "billiard==4.2.0",
-  "kombu==5.3.5",
+  "kombu==5.3.7",
   # utilities
-  "jsonschema==4.19.1",
-  "lxml==4.9.3",
+  "jsonschema==4.22.0",
+  "lxml==5.2.2",
   "psycopg2-binary==2.9.9",
-  "redis==5.0.1",
-  "requests==2.32.2",
-  "pydantic==2.4.2",
-  "nh3==0.2.15",
-  "tinycss2==1.2.1",
+  "redis==5.0.6",
+  "requests==2.32.3",
+  "pydantic==2.7.4",
+  "nh3==0.2.17",
+  "tinycss2==1.3.0",
   # computational
   "numpy==1.26.1",
   "pandas==2.1.1",
@@ -56,8 +57,8 @@ dependencies = [
   "scipy==1.11.3",
   "bmds==23.4",
   # exports
-  "rispy==0.8.1",
-  "python-docx==1.0.1",
+  "rispy==0.9.0",
+  "python-docx==1.1.2",
 ]
 
 [project.optional-dependencies]
@@ -67,17 +68,17 @@ dev = [
   # lint and formatting tools
   "ruff==0.4.9",
   "djhtml==3.0.6",
-  "pre-commit==3.6.0",
+  "pre-commit==3.7.1",
   # django development
-  "django-debug-toolbar==4.2.0",
-  "django-browser-reload==1.12.0",
+  "django-debug-toolbar==4.4.2",
+  "django-browser-reload==1.12.1",
   "django-extensions==3.2.3",
-  "faker==19.10.0",
+  "faker==25.8.0",
   # tests
-  "coverage==7.3.2",
-  "pytest==7.4.2",
-  "pytest-django==4.5.2",
-  "vcrpy==5.1.0",
+  "coverage==7.5.3",
+  "pytest==8.2.2",
+  "pytest-django==4.8.0",
+  "vcrpy==6.0.1",
   "pytest-recording==0.13.1",
   "playwright==1.40.0",
   "pytest-playwright==0.4.3",
@@ -86,8 +87,8 @@ docs = [
   "mkdocs-material==9.4.6",
 ]
 prod = [
-  "django-anymail==10.1",
-  "sentry_sdk==1.45.0",
+  "django-anymail==10.3",
+  "sentry_sdk==2.5.1",
 ]
 
 [project.scripts]
