--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -594,6 +594,14 @@
   fields:
     app_label: docs
     model: documentationpagetag
+- model: contenttypes.contenttype
+  fields:
+    app_label: lit
+    model: workflow
+- model: contenttypes.contenttype
+  fields:
+    app_label: udf
+    model: tagudfcontent
 - model: auth.permission
   fields:
     name: Can access Wagtail admin
