--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ omit = [
   "*migrations*",
   "./build/",
   "./client/hawc_client/interactive.py",
+  "./hawc/apps/*/management/*",
   "./hawc/main/*",
   "./scripts/private/*",
   "./tests/*",
